adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum culpa optio quae deleniti nostrum quo officia ullam voluptatum illo, alias dolorum exercitationem labore fugiat quibusdam iste nihil dolor aperiam aut.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eaque enim quas nesciunt corporis! Amet, ex. Voluptatem laborum similique consequuntur! Quam culpa tempore voluptatibus reiciendis velit ipsum, quasi vero. Beatae.</p>
 </body>
 </html>
